--- a/src/app/authentication/signup/signup.component.html
+++ b/src/app/authentication/signup/signup.component.html
@@ -23,9 +23,9 @@
 
                     <div class="mb-3 row">
                         <div class="col-12 ">
-                    <input class="form-control" type="text"  hidden
-                    placeholder="Nombre"
-                    formControlName="id_empresa">
+                    <input class="form-control" type="text"  
+                    placeholder="id_empresa"
+                    formControlName="id_empresa" > 
                         </div>
                     </div>
   
