--- a/src/app/component/accion-masiva-form/accion-masiva-form.component.html
+++ b/src/app/component/accion-masiva-form/accion-masiva-form.component.html
@@ -847,6 +847,20 @@
 
                           <div *ngIf="segundoPasoForm.controls['id_motivo_mov_stk'].value==1 || segundoPasoForm.controls['id_motivo_mov_stk'].value==4" class="mt-4 text-center">
                             <div class="col-md-6  text-center">
+                              <div class="form-check  text-center">
+
+                                  <input id="checkbox-signup" name="banio" type="checkbox" class="form-check-input" formControlName="banio">
+                                  <label for="checkbox-signup"  class="form-check-label"> Baño Acarmic</label>
+                              </div>
+                          </div>
+                          <div class="col-md-6  text-center">
+                            <div class="form-check  text-center">
+
+                                <input id="checkbox-signup" name="banio_nitromic" type="checkbox" class="form-check-input" formControlName="banio_nitromic">
+                                <label for="checkbox-signup"  class="form-check-label"> Baño Nitromic</label>
+                            </div>
+                        </div>                          
+                            <div class="col-md-6  text-center">
                                 <div class="form-check  text-center">
 
                                     <input id="checkbox-signup" name="bania_garrapata" type="checkbox" class="form-check-input" formControlName="bania_garrapata">
