--- a/src/app/dashboards/dashboard-components/clima/clima.component.html
+++ b/src/app/dashboards/dashboard-components/clima/clima.component.html
@@ -31,6 +31,7 @@
                                         [class.wi-day-rain-mix]="dailyForecast?.Day?.Icon === 14"
                                         [class.wi-day-cloud]="dailyForecast?.Day?.Icon === 7"     
                                         [class.wi-day-showers]="dailyForecast?.Day?.Icon === 12"   
+                                        [class.wi-rain-mix]="dailyForecast?.Day?.Icon === 13" 
                                         [class.wi-day-storm-showers]="dailyForecast?.Day?.Icon === 15"   
                                         [class.wi-day-cloudy]="dailyForecast?.Day?.Icon === 3"   
                                         [class.wi-day-cloudy-high]="dailyForecast?.Day?.Icon === 6"   
